syntax = "proto3";

option go_package = ".;mtast";

message ColumnarLookup {
  repeated string sites = 1;
  repeated string nodes = 2;
  repeated string keys = 3;
}

message RLE {}

message ColumnarChange {
  ColumnarLookup lookup = 1;

  repeated int64 site = 2;
  repeated int64 clock = 3;
  repeated int64 node = 4;
  repeated int64 parent = 5;
  repeated int64 leftSite = 6;
  repeated int64 leftClock = 7;
  repeated int64 key = 8;
  repeated ColumnValueType value_Type = 9;
  repeated bytes value = 10;
}

enum ColumnValueType {
  COLUMN_VALUE_TYPE_UNSPECIFIED = 0;
  STRING = 1;
  JSON = 2;
}